objects/User.object
<CustomObject>
    <fields>
        <fullName>Ability_to_Complete_Install_Wrkst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ability to Complete Install Wrkst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Quota__c</fullName>
        <label>Annual Quota</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Report_Executive_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag/ indicator signifying if the user has Executive view to Custom reporting</description>
        <label>Custom Report Executive View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMS_ID__c</fullName>
        <label>EMS ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + " " + LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Initial__c</fullName>
        <formula>LEFT(LastName, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Initial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveOps_ID__c</fullName>
        <label>LiveOps ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__LOOPlus_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will allow this user to run Document Packages on the Drawloop next-release environment when it is available for testing.</inlineHelpText>
        <label>Drawloop Next Release Test User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsPassword__c</fullName>
        <label>DocuSign Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsToken__c</fullName>
        <label>DocuSign API UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Official_Hire_Date__c</fullName>
        <label>Official Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Employer__c</fullName>
        <label>Previous Employer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Associate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify retention associates so we can properly assign Live Ops routing.</description>
        <label>Retention Associate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Detail__c</fullName>
        <label>Source Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Reason__c</fullName>
        <label>Term Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_s_Year__c</fullName>
        <formula>TEXT( YEAR(TODAY()) )</formula>
        <label>Today's Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <description>Always exclude [We will use this for all users who doesn't want to inactive never]
Temporarily Exclude [ We will use this to exclude the user from deactivating batch for Lead routing and Reactivating the user(but the user should be in this status for 48 hours if he is reactivated.)</description>
        <inlineHelpText>Always exclude [We will use this for all users who doesn't want to inactive never]
Temporarily Exclude [ We will use this to exclude the user from deactivating batch for Lead routing and Reactivating the user(but the user should be in this status for 48h</inlineHelpText>
        <label>User Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always exclude</fullName>
                </value>
                <value>
                    <fullName>Temporarily Exclude</fullName>
                </value>
                <value>
                    <fullName>Include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Winback_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Winback Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send Document Cloud agreements on behalf of this user.</description>
        <inlineHelpText>Check this box so that others in this Salesforce organization can send Document Cloud agreements on behalf of this user.</inlineHelpText>
        <label>Adobe Sign Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user's email address has been validated in Document Cloud API.</description>
        <inlineHelpText>This checkbox indicates that the user's email address has been validated in Document Cloud API.</inlineHelpText>
        <label>Adobe Sign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mgr</fullName>
                </value>
                <value>
                    <fullName>NAE</fullName>
                </value>
                <value>
                    <fullName>NAM</fullName>
                </value>
                <value>
                    <fullName>non-sales</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
                <value>
                    <fullName>SE-BOB</fullName>
                </value>
                <value>
                    <fullName>SE-NB</fullName>
                </value>
                <value>
                    <fullName>SR-BoB</fullName>
                </value>
                <value>
                    <fullName>SR-NB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Cain</fullName>
                </value>
                <value>
                    <fullName>Evan Anger</fullName>
                </value>
                <value>
                    <fullName>Heather Sorrels</fullName>
                </value>
                <value>
                    <fullName>Kristin Abraham</fullName>
                </value>
                <value>
                    <fullName>Nicole Comas</fullName>
                </value>
                <value>
                    <fullName>Pam Russo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>CareerBuilder Applicant</fullName>
                </value>
                <value>
                    <fullName>CareerBuilder Sourced</fullName>
                </value>
                <value>
                    <fullName>Craigslist</fullName>
                </value>
                <value>
                    <fullName>Hotjobs Applicant</fullName>
                </value>
                <value>
                    <fullName>HotJobs Sourced</fullName>
                </value>
                <value>
                    <fullName>Ladders</fullName>
                </value>
                <value>
                    <fullName>Linked In</fullName>
                </value>
                <value>
                    <fullName>Monster Applicant</fullName>
                </value>
                <value>
                    <fullName>Monster Sourced</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outside Referral</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>Yodle Careers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Assignment__c</fullName>
        <inlineHelpText>Team Assignments for LiveOps routing and reporting in Salesforce</inlineHelpText>
        <label>Team Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Team (AMP)</fullName>
                </value>
                <value>
                    <fullName>Red Team (AMP)</fullName>
                </value>
                <value>
                    <fullName>New Glasgow (AMP)</fullName>
                </value>
                <value>
                    <fullName>AMJax (AMP)</fullName>
                </value>
                <value>
                    <fullName>Inbound (AMP)</fullName>
                </value>
                <value>
                    <fullName>AM Red Beard</fullName>
                </value>
                <value>
                    <fullName>AM No Beard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Class__c</fullName>
        <label>Training Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>July 2012</fullName>
                </value>
                <value>
                    <fullName>August 2012</fullName>
                </value>
                <value>
                    <fullName>September 2012</fullName>
                </value>
                <value>
                    <fullName>October 2012</fullName>
                </value>
                <value>
                    <fullName>November 2012</fullName>
                </value>
                <value>
                    <fullName>December 2012</fullName>
                </value>
                <value>
                    <fullName>Jul-08</fullName>
                </value>
                <value>
                    <fullName>Aug-08</fullName>
                </value>
                <value>
                    <fullName>Sep-08</fullName>
                </value>
                <value>
                    <fullName>Oct-08</fullName>
                </value>
                <value>
                    <fullName>Nov-08</fullName>
                </value>
                <value>
                    <fullName>Dec-08</fullName>
                </value>
                <value>
                    <fullName>Jan-09</fullName>
                </value>
                <value>
                    <fullName>Feb-09</fullName>
                </value>
                <value>
                    <fullName>Mar-09</fullName>
                </value>
                <value>
                    <fullName>Apr-09</fullName>
                </value>
                <value>
                    <fullName>May-09</fullName>
                </value>
                <value>
                    <fullName>Jun-09</fullName>
                </value>
                <value>
                    <fullName>Jul-09</fullName>
                </value>
                <value>
                    <fullName>Aug-09</fullName>
                </value>
                <value>
                    <fullName>Sep-09</fullName>
                </value>
                <value>
                    <fullName>Oct-09</fullName>
                </value>
                <value>
                    <fullName>Nov-09</fullName>
                </value>
                <value>
                    <fullName>Dec-09</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YBN_Consultant_Team__c</fullName>
        <label>YBN Consultant Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miracle-Ear</fullName>
                </value>
                <value>
                    <fullName>Dwyer</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - Team A</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - Team B</fullName>
                </value>
                <value>
                    <fullName>Tier 3 - IB/OB</fullName>
                </value>
                <value>
                    <fullName>Tier 3 - IB Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-2</fullName>
                </value>
                <value>
                    <fullName>3-5</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_to_CTS_Sync_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator/ flag signifying that any any CTS integration object will execute the CTS Sync Service to create a CTS Ticket if the related record is created by this user.</description>
        <inlineHelpText>Indicator/ flag signifying that any any CTS integration object will execute the CTS Sync Service to create a CTS Ticket if the related record is created by this user.</inlineHelpText>
        <label>SFDC to CTS Sync Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AlternateSFId__c</fullName>
        <description>Unique identifier signifying the target instance created Id for the corresponding source record</description>
        <inlineHelpText>Unique identifier signifying the target instance created Id for the corresponding source record</inlineHelpText>
        <label>AlternateSFId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acuity_Id__c</fullName>
        <label>Acuity Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LiveOps_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers_AMM</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator,YBN System Administrator,System Admin +</value>
        </filters>
        <label>Admin Users - ALLAMM</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <sharedTo>
            <role>ExecutiveVP</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPP_Portal</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Partner Community Lighthouse Dental</value>
        </filters>
        <label>CPP Portal</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Portal</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Partner Community Lighthouse Dental</value>
        </filters>
        <label>Partner Portal</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Stale_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessOrEqual</operation>
            <value>10/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Communit</value>
        </filters>
        <label>Stale Users</label>
    </listViews>
    <listViews>
        <fullName>Users_Active_Not_Logged_Since_last_10_Da</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Communit</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>API</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Users Active and NotLogged For 60 Days</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator,YBN System Administrator,System Admin +</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>IT_Setup_New_SF_User_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_BY_ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <columns>Role_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>IT Setup - New SF User</value>
        </filters>
        <label>IT Setup - New SF User Users</label>
    </listViews>
    <listViews>
        <fullName>Subba_Okta_New_User_Requests_for_X_days</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_BY_ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <columns>Role_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_BY_NAME</field>
            <operation>equals</operation>
            <value>Okta System</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <label>Subba Okta New User Requests for X days</label>
    </listViews>
    <listViews>
        <fullName>API_and_Integration_Users</fullName>
        <booleanFilter>(1 OR 2 OR 4) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>startsWith</operation>
            <value>API</value>
        </filters>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>TECHNOLOGY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>DREAMFORCE</value>
        </filters>
        <label>API ,Tech,DF and Integration Users</label>
    </listViews>
    <listViews>
        <fullName>Subba_Salseforce_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Subba Salseforce Active Users</label>
    </listViews>
    <listViews>
        <fullName>CTS_Sync_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_to_CTS_Sync_Enabled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CTS Sync Users</label>
    </listViews>
    <listViews>
        <fullName>Disabled_Users_Last_2_Days</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>4/1/2020 12:00 AM</value>
        </filters>
        <label>Disabled Users Last 2 Days</label>
    </listViews>
    <listViews>
        <fullName>Subba_Active_API_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>API</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Subba Active API Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>